--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Tp1Magni
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3307/tp1magni
+spring.datasource.url=jdbc:mysql://localhost:3306/tp1magni
 spring.datasource.username=root
-spring.datasource.password=Astr0nomi@
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
