--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,17 @@ spring.application.name=Tp1Magni
 
 server.port=8080
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/tp1magni
-spring.datasource.username=root
+#MYSQL
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:mysql://localhost:3306/tp1magni
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+
+#H2 PRUEBAS
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=112233
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
